# ethics-filter

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
constitution/: templates.json
docs/: audit-report.md  brief.md  hermes-integration.md  platform-setup.md
ethics_filter/: __init__.py  engine.py  mcp_server.py
modules/: compliance.md  conscious-leadership.md  environmental.md  ethical-framework.md  fairness.md  transparency.md
tests/: evaluate_v2.py  generate_report_v2.py  results_v2.json  scenarios_v2.json
tests/agent-baseline/: results.md  scenarios.json  verbatim-log.md
tests/agent-baseline/v2/: results.md
